tests/snapshots/regression/precedence__comparison_vs_arithmetic.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/comparison_vs_arithmetic.flx
exit_code: 1

• 6 errors • tests/fixtures/precedence/comparison_vs_arithmetic.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E415]: Missing Main Function (strict)

Strict mode requires `fn main()` for all programs.

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^^
2 | print(1 < 2 + 3);
  | ^^^^^^^^^^^^^^^^^

Hint:
  Add `fn main() { ... }` as the program entrypoint.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:2:1
  |
2 | print(1 < 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:2:1
  |
2 | print(1 < 2 + 3);
  | ^^^^^^^^^^^^^^^^
  | ---------------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 6 errors.
